little refined code

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   </head>
   <body class="container">
     <h1>Basic example</h1>
-    <button id="locateUser">Get Location</button>
+    <button id="locateUser">Get Current Location</button>
     <br>
     <input id="location" type="text">
-    <button id="weatherLocation">Find Weather Location</button>
+
+    <button id="weatherLocation">Get Location Weather</button>
     <div class="showHumidity"></div>
     <div class="showTemp"></div>
     <div id="map"></div>
